<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_margin="35dp"
        android:contentDescription="@string/login_description"
        android:rotationX="-343"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/hint_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/purple_200"

        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/purple_200"

        />

    <Button
        android:id="@+id/button"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttom_login"
        android:background="@color/black"
        android:onClick="onClickCreateOrder"
        android:textColor="@color/purple_200"
        />
</LinearLayout>